--- a/.github/workflows/deploytoazure.yml
+++ b/.github/workflows/deploytoazure.yml
@@ -30,7 +30,7 @@ jobs:
       run: dotnet build --configuration Release
       
     - name: Publish
-      run: dotnet publics -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
+      run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
       
     - name: Deploy
       uses: Azure/webapps-deploy@v2
